[package]
name = "tetris-tui"
version = "0.2.0"
edition = "2021"
authors = ["Quan Tong <quantonganh@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Tetris in the terminal"
readme = "README.md"
homepage = "https://github.com/quantonganh/tetris-tui"
repository = "https://github.com/quantonganh/tetris-tui"
keywords = ["tetris", "cli", "terminal"]
categories = ["command-line-game"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26"
rand = "0.8.5"
rusqlite = { version = "0.29.0", features = ["bundled"] }
clap = { version = "4.4", features = ["derive"] }
local-ip-address = "0.5.5"
directories-next = "2.0.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
itertools = "0.12.1"


[profile.release]
strip = "debuginfo"
